# get_texts

./: .gitignore  README.md  setup.cfg
src/get_texts/: get_texts.py
src/get_texts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
