[metadata]
name = get_texts
version = 0.0.1
author = Thomas Wight
author_email = thomas@twight.dev
description = Extract text messages from iOS backups
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redcitylights/get_texts
project_urls =
    Bug Tracker = https://github.com/redcitylights/get_texts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Natural Language :: English
    Topic :: Utilities
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    colorama
    Click
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    get_texts = get_texts.get_texts:get_texts

